BSS benchmarks seem ok

--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -708,7 +708,7 @@ after
 
 Decorators are often used to simplify tasks like measuring a function's execution time, or CPU and memory footprint, which is intended to observe or measure but not modify the original function.\footnote{\url{https://pypi.org/project/line-profiler/, https://pypi.org/project/memory-profiler/}}
 
-The \Verb#random# module of Python contains a random number generator (RNG).\footnote{\url{https://docs.python.org/3/library/random.html}} The \Verb#seed# function initializes the random number generator. \footnote{\url{https://docs.python.org/3/library/random.html\#bookkeeping-functions}} This is because the RNG in Python is pseudorandom (\cite{pseudorng}), which means that given the same starting seed, the exact same sequence of numbers are generated deterministically. The random seed is usually a parameter to the script or Python program, such that the user can recreate the same RNG sequences for testing purposes by passing the same seed.
+The \Verb#random# module of Python contains a random number generator (RNG).\footnote{\url{https://docs.python.org/3/library/random.html}} The \Verb#seed# function initializes the random number generator. \footnote{\url{https://docs.python.org/3/library/random.html\#bookkeeping-functions}} This is because the RNG in Python is pseudorandom (\cite{pseudorng}), which means that given the same starting seed, the exact same sequence of numbers are generated deterministically. The random seed is usually a parameter to a script or Python program, such that the user can recreate the same RNG sequences for testing purposes by passing the same seed.
 
 \subsubsection{Numerical and machine learning libraries for Python}
 
