--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -188,24 +188,24 @@ Next, the list and generator for the forward operation of the transform, which i
 In this section, only short excerpts of the torch port were shown, due to requiring to display hundreds of lines of code to show the full effort. Instead, the workflow for how to use the GitHub UI for browsing the individual steps of the torch port was described in figure \ref{fig:ghcommitbrowser}. This list describes several important commits:
 
 \begin{tight_enumerate}
-	\item
-		Supporting torch in the non-sliced NSGT:\\
-		{\scriptsize \url{https://github.com/sevagh/nsgt/commit/8d873f7dc8053c553664dcc5c0816eaf3e1ddae0}}
 	 \item
-		 Returning tensors (i.e. ndarrays or matrices) instead of generators:\\
-		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/1a5886bced951af132ab8659d30a565bcade87b2}}
-	 \item
-		 Optimizing the backward/inverse transform:\\
-		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/9552aa1eb0735e93ce91b648a5b7f629066693b3}}
-	 \item
-		 Adding a configurable device (CPU/GPU) to the sliCQT for finer user control:\\
-		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/2d41fe002d95e4dbd1cdb76ef24aa03c95cfbe46}}
+		 Beginning the torch port of the sliced NSGT (or sliCQT):\\
+		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/ce9785d40d1053fcffc72115d5fbdcb28d44bf7c}}
 	 \item
 		 Optimizing the main loop of the forward transform:\\
 		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/49a70d112ba4091d271a9438a8c38cf380ce62b4}}
 	 \item
-		 Beginning the torch port of the sliced NSGT (or sliCQT):\\
-		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/ce9785d40d1053fcffc72115d5fbdcb28d44bf7c}}
+		 Adding a configurable device (CPU/GPU) to the sliCQT for finer user control:\\
+		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/2d41fe002d95e4dbd1cdb76ef24aa03c95cfbe46}}
+	 \item
+		 Optimizing the backward/inverse transform:\\
+		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/9552aa1eb0735e93ce91b648a5b7f629066693b3}}
+	 \item
+		 Returning tensors (i.e. ndarrays or matrices) instead of generators:\\
+		 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/1a5886bced951af132ab8659d30a565bcade87b2}}
+	 \item
+	 	 Supporting torch in the non-sliced NSGT:\\
+	 	 {\scriptsize \url{https://github.com/sevagh/nsgt/commit/8d873f7dc8053c553664dcc5c0816eaf3e1ddae0}}
 \end{tight_enumerate}
 
 \newpagefill
@@ -427,6 +427,7 @@ The maximized metric is the median SDR score across the 4 targets of the 14 vali
 \newpagefill
 
 \subsubsection{GPU-accelerated BSS metrics with CuPy}
+\label{sec:fasterbsscupy}
 
 During the oracle evaluation, line-profiler showed that the slowest step was the BSS metrics calculation from the sigsep-mus-eval\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}} package. Listing \ref{lst:slowbssprofile} shows some of the line-profiler output of the IRM1 oracle mask with the STFT, using a window size of 4096, on 1 out of the 14 MUSDB18-HQ validation tracks, with the \Verb#@profile# decorator placed on the BSS inner computation functions.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval/blob/master/museval/metrics.py\#L512-L601}}
 
