--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1695,3 +1695,14 @@ title = {Pseudorandom Number Generators},
 isbn = {9780470061602},
 doi = {10.1002/9780470061602.eqf13003}
 }
+
+@article{ndarrayfast,
+author = {van der Walt, Stéfan and Colbert, S. and Varoquaux, Gael},
+year = {2011},
+month = {05},
+pages = {22 - 30},
+title = {The NumPy Array: A Structure for Efficient Numerical Computation},
+volume = {13},
+journal = {Computing in Science \& Engineering},
+doi = {10.1109/MCSE.2011.37}
+}
