--- a/latex/report.tex
+++ b/latex/report.tex
@@ -1,4 +1,5 @@
 \documentclass[letter,12pt,notitlepage]{article}
+\usepackage[svgnames]{xcolor}
 \usepackage{subfiles}
 \usepackage[left=4cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage[shortlabels]{enumitem}
@@ -14,7 +15,9 @@
 \usepackage{wrapfig}
 \usepackage{verbatim}
 \usepackage{listings}
+  
 \usepackage{minted}
+\usemintedstyle{github}
 \usepackage{subfig}
 \usepackage{titling}
 \usepackage[compatibility=false]{caption}
